--- a/euprava/frontend/eUprava/src/app/components/create-appointment/create-appointment.component.html
+++ b/euprava/frontend/eUprava/src/app/components/create-appointment/create-appointment.component.html
@@ -1,24 +1,23 @@
 <form [formGroup]="appointmentForm" (ngSubmit)="onSubmit()">
   <div>
-    <label for="studentID">Student:</label>
-    <input type="text" id="studentID" formControlName="studentID">
-  </div>
-
-  <div>
     <label for="date">Datum:</label>
     <input type="date" id="date" formControlName="date">
   </div>
 
   <div>
-    <label for="doorNumber">Broj vrata:</label>
+    <label for="time">Vreme:</label>
+    <input type="time" id="time" formControlName="time">
+  </div>
+
+  <div>
+    <label for="doorNumber">Broj ordinacije:</label>
     <input type="number" id="doorNumber" formControlName="doorNumber">
   </div>
 
   <div>
-    <label for="description">Opis:</label>
+    <label for="description">Dodatan opis:</label>
     <textarea id="description" formControlName="description"></textarea>
   </div>
-
 
   <button type="submit">Kreiraj pregled</button>
 </form>
