--- a/euprava/frontend/eUprava/src/app/components/appointment-management/appointment-management.component.html
+++ b/euprava/frontend/eUprava/src/app/components/appointment-management/appointment-management.component.html
@@ -97,7 +97,7 @@
     <button class="button" (click)="createAppointment()">Kreiranje pregleda</button>
     <button class="button">Brisanje pregleda</button>
     <button class="button">Ažuriranje pregleda</button>
-    <button class="button">Kreiranje sistematskog</button>
+    <button class="button" (click)="createSystematicCheck()">Kreiranje sistematskog</button>
   </div>
 </main>
 </body>
