--- a/euprava/frontend/eUprava/src/app/components/student-appointment-management/student-appointment-management.component.html
+++ b/euprava/frontend/eUprava/src/app/components/student-appointment-management/student-appointment-management.component.html
@@ -94,11 +94,8 @@
   <h1 style="margin-bottom: 50px">Dobrodošli u EZdravstvo</h1>
 
   <div class="button-container">
-    <button class="button" (click)="createAppointment()">Kreiranje pregleda</button>
-    <button class="button" (click)="deleteAppointment()">Brisanje pregleda</button>
-    <button class="button" (click)="updateAppointment()">Ažuriranje pregleda</button>
-    <button class="button" (click)="createSystematicCheck()">Kreiranje sistematskog</button>
-    <button class="button" (click)="createTherapy()">Kreiranje terapije</button>
+    <button class="button" (click)="scheduleAppointment()">Zakazivanje pregleda</button>
+    <button class="button" (click)="cancelAppointment()">Otkazivanje pregleda</button>
   </div>
 </main>
 </body>
