--- a/euprava/frontend/eUprava/src/app/components/create-appointment/create-appointment.component.html
+++ b/euprava/frontend/eUprava/src/app/components/create-appointment/create-appointment.component.html
@@ -2,21 +2,25 @@
   <div>
     <label for="date">Datum:</label>
     <input type="date" id="date" formControlName="date">
+    <div *ngIf="hasError('date', 'required')" class="text-danger">Datum je obavezan.</div>
   </div>
 
   <div>
     <label for="time">Vreme:</label>
     <input type="time" id="time" formControlName="time">
+    <div *ngIf="hasError('time', 'required')" class="text-danger">Vreme je obavezno.</div>
   </div>
 
   <div>
     <label for="doorNumber">Broj ordinacije:</label>
     <input type="number" id="doorNumber" formControlName="doorNumber">
+    <div *ngIf="hasError('doorNumber', 'required')" class="text-danger">Broj ordinacije je obavezan.</div>
   </div>
 
   <div>
     <label for="description">Dodatan opis:</label>
     <textarea id="description" formControlName="description"></textarea>
+    <div *ngIf="hasError('description', 'maxlength')" class="text-danger">Maksimalno 200 karaktera za opis.</div>
   </div>
 
   <button type="submit">Kreiraj pregled</button>
