--- a/euprava/frontend/eUprava/src/app/components/student-appointment-management/student-appointment-management.component.html
+++ b/euprava/frontend/eUprava/src/app/components/student-appointment-management/student-appointment-management.component.html
@@ -43,7 +43,7 @@
 
     h1 {
       font-size: 3.125rem;
-      color: var(--gray-900);
+      color: white;
       font-weight: 500;
       line-height: 100%;
       letter-spacing: -0.125rem;
@@ -73,7 +73,6 @@
 
     .button {
       padding: 1rem 2rem;
-      background-color: var(--pill-accent);
       color: white;
       border: none;
       border-radius: 0.5rem;
