--- a/euprava/frontend/eUprava/src/styles.css
+++ b/euprava/frontend/eUprava/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #343a40;
+  font-family: Arial, sans-serif;
+  margin:0px;
+  overflow-x: hidden;
+}
+
+.button {
+  background-color: #9eb0f0;
+}
+
