Login and register

--- a/euprava/frontend/eUprava/src/app/components/appointment-management/appointment-management.component.html
+++ b/euprava/frontend/eUprava/src/app/components/appointment-management/appointment-management.component.html
@@ -54,6 +54,7 @@
     }
 
     main {
+      background-color: navajowhite;
       width: 100%;
       min-height: 100vh; /* Changed min-height to full viewport height */
       display: flex;
