--- a/euprava/frontend/eUprava/src/app/components/navbar/navbar.component.html
+++ b/euprava/frontend/eUprava/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,37 @@
-<nav class="navbar">
-  <a class="navbar-brand" routerLink="/">Moja Aplikacija</a>
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" (click)="goToReactApp()" style="cursor:pointer">Pocetna</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/">Upravljanje terminima</a>
-    </li>
-  </ul>
-</nav>
+<div>
+  <nav class="navbar">
+    <a class="navbar-brand" href="#">Euprava</a>
+    <button class="navbar-toggler" onclick="toggleNavbar()">☰</button>
+    <div class="navbar-menu" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+
+        <li *ngIf="!isLoggedIn" class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li *ngIf="!isLoggedIn" class="nav-item">
+          <a class="nav-link" href="/register">Register</a>
+        </li>
+
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a class="nav-link" href="#">University</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a class="nav-link" href="#">Dorms</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a class="nav-link" href="#">Healthcare</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a class="nav-link" href="#">Food</a>
+        </li>
+
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <button class="btn btn-danger" (click)="logout()">Logout</button>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
