--- a/euprava/frontend/eUprava/src/app/components/register/register.component.html
+++ b/euprava/frontend/eUprava/src/app/components/register/register.component.html
@@ -1,1 +1,72 @@
-<p>register works!</p>
+<div class="container">
+  <div class="form-wrapper">
+    <h2>Register</h2>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="first_name">First Name</label>
+        <input type="text" class="form-control" id="first_name" formControlName="first_name">
+        <div *ngIf="registerForm.controls['first_name'].invalid && registerForm.controls['first_name'].touched" class="text-danger">
+          First name is required and should be at least 2 characters.
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="last_name">Last Name</label>
+        <input type="text" class="form-control" id="last_name" formControlName="last_name">
+        <div *ngIf="registerForm.controls['last_name'].invalid && registerForm.controls['last_name'].touched" class="text-danger">
+          Last name is required and should be at least 2 characters.
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" formControlName="email">
+        <div *ngIf="registerForm.controls['email'].invalid && registerForm.controls['email'].touched" class="text-danger">
+          Valid email is required.
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="password">
+        <div *ngIf="registerForm.controls['password'].invalid && registerForm.controls['password'].touched" class="text-danger">
+          Password must be at least 8 characters.
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="phone">Phone</label>
+        <input type="text" class="form-control" id="phone" formControlName="phone">
+        <div *ngIf="registerForm.controls['phone'].invalid && registerForm.controls['phone'].touched" class="text-danger">
+          Phone number is required.
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="address">Address</label>
+        <input type="text" class="form-control" id="address" formControlName="address">
+        <div *ngIf="registerForm.controls['address'].invalid && registerForm.controls['address'].touched" class="text-danger">
+          Address is required.
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="user_type">User Type</label>
+        <select class="form-control" style="width: 100%" id="user_type" formControlName="user_type">
+          <option value="" disabled>Select user type</option>
+          <option value="admin">Admin</option>
+          <option value="user">User</option>
+        </select>
+        <div *ngIf="registerForm.controls['user_type'].invalid && registerForm.controls['user_type'].touched" class="text-danger">
+          User type is required.
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Register</button>
+
+      <div *ngIf="errorMessage" class="alert alert-danger mt-2">
+        {{ errorMessage }}
+      </div>
+    </form>
+  </div>
+</div>
