--- a/euprava/frontend/eUprava/src/app/components/register/register.component.css
+++ b/euprava/frontend/eUprava/src/app/components/register/register.component.css
@@ -1,4 +1,3 @@
-/* Stilovi za obuhvatanje forme */
 .container {
   display: flex;
   justify-content: center;
@@ -7,8 +6,7 @@
 
 .form-wrapper {
   width: 100%;
-  max-width: 500px; /* Maksimalna širina forme */
-  margin: 0 auto;
+  max-width: 500px;
   padding: 1rem;
   background-color: #fff;
   border-radius: 8px;
