--- a/euprava/frontend/eUprava/src/styles.css
+++ b/euprava/frontend/eUprava/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: #343a40;
+  background-color: lightsteelblue;
   font-family: Arial, sans-serif;
   margin:0px;
   overflow-x: hidden;
