--- a/euprava/frontend/eUprava/src/app/components/appointment-update/appointment-update.component.html
+++ b/euprava/frontend/eUprava/src/app/components/appointment-update/appointment-update.component.html
@@ -20,10 +20,6 @@
       <textarea id="description" formControlName="description"></textarea>
     </div>
     <div>
-      <label for="systematic">Systematic</label>
-      <input id="systematic" formControlName="systematic" type="checkbox" class="align-right">
-    </div>
-    <div>
       <label for="faculty_name">Faculty Name</label>
       <input id="faculty_name" formControlName="faculty_name" type="text">
     </div>
@@ -31,12 +27,12 @@
       <label for="field_of_study">Field of Study</label>
       <input id="field_of_study" formControlName="field_of_study" type="text">
     </div>
-    <div>
-      <label for="reserved" class="label-right">Reserved</label>
-      <input id="reserved" formControlName="reserved" type="checkbox" class="align-right">
+    <div *ngIf="!appointmentForm.get('systematic')?.value">
+      <label for="reserved">Reserved</label>
+      <input id="reserved" formControlName="reserved" type="checkbox"  class="align-right"/>
     </div>
 
-    <div class="button-group">
+    <div class="button-group"  [ngStyle]="{'margin-top': appointmentForm.get('systematic')?.value ? '20px' : '0'}">
       <button type="submit" [disabled]="!appointmentForm.valid">Update</button>
       <button type="button" (click)="goBack()">Cancel</button>
     </div>
