--- a/euprava/frontend/eUprava/src/app/components/student-appointment-list/student-appointment-list.component.html
+++ b/euprava/frontend/eUprava/src/app/components/student-appointment-list/student-appointment-list.component.html
@@ -13,9 +13,9 @@
     <tbody>
     <tr *ngFor="let appointment of appointments">
       <td class="date-column">{{ appointment.date | date: 'short' }}</td>
-      <td>{{ appointment.student || 'null' }}</td>
+      <td>{{ appointment.doctor_id?.first_name || '' }} {{ appointment.doctor_id?.last_name || '' }}</td>
       <td>{{ appointment.door_number }}</td>
-      <td>{{ appointment.description || 'null' }}</td>
+      <td>{{ appointment.description || '' }}</td>
       <td>
         <button class="button" (click)="scheduleAppointment(appointment.id)">Zakazi</button>
       </td>
