--- a/euprava/frontend/eUprava/src/app/components/student-cancel-appointment-list/student-cancel-appointment-list.component.html
+++ b/euprava/frontend/eUprava/src/app/components/student-cancel-appointment-list/student-cancel-appointment-list.component.html
@@ -13,15 +13,15 @@
     <tbody>
     <tr *ngFor="let appointment of appointments">
       <td class="date-column">{{ appointment.date | date: 'short' }}</td>
-      <td>{{ appointment.student || 'null' }}</td>
+      <td>{{ appointment.doctor_id?.first_name || '' }} {{ appointment.doctor_id?.last_name || '' }}</td>
       <td>{{ appointment.door_number }}</td>
-      <td>{{ appointment.description || 'null' }}</td>
+      <td>{{ appointment.description || '' }}</td>
       <button class="button" style="margin:10px"
         [disabled]="!isCancelable(appointment.date)"
         (click)="cancelAppointment(appointment.id)">
         Otkazi
       </button>
-      <div *ngIf="!isCancelable(appointment.date)">
+      <div *ngIf="!isCancelable(appointment.date)" class="text-danger">
         <p>Termine za manje od 24 časa ne možete otkazati.</p>
       </div>
     </tr>
