--- a/euprava/frontend/eUprava/src/app/components/appointment-list-update/appointment-list-update.component.css
+++ b/euprava/frontend/eUprava/src/app/components/appointment-list-update/appointment-list-update.component.css
@@ -1,28 +1,47 @@
-/* appointment-list.component.css */
+/* Wrapper za naslov i tabele */
+.appointment-section {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
 
-.appointment-table-container {
+.section-title {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+/* Wrapper za tabele */
+.table-wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 20px;
+  width: 100%;
+}
+
+/* Stil za tabele */
+.appointment-table-container {
+  flex: 1;
+  max-width: 45%;
+  overflow-x: hidden;
 }
 
 .appointment-table {
-  width: 100%; /* Promeni vrednost po potrebi */
+  width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
-  font-size: 18px;
+  font-size: 16px;
   text-align: left;
 }
 
-.appointment-table thead tr {
+.appointment-table thead {
   background-color: #f2f2f2;
-  color: #333;
-  text-align: left;
-  font-weight: bold;
 }
 
-.appointment-table th,
-.appointment-table td {
-  padding: 12px 15px;
+.appointment-table th, .appointment-table td {
+  padding: 5px 10px;
+  white-space: nowrap;
+  text-align: center;
+  font-size: 14px; /* Smanjen font */
 }
 
 .appointment-table tbody tr {
@@ -33,24 +52,21 @@
   background-color: #f9f9f9;
 }
 
-.appointment-table th.date-column,
-.appointment-table td.date-column {
-  width: 150px; /* Promeni širinu po potrebi */
-}
-
 .button {
-  padding: 1rem 2rem;
+  padding: 5px 10px;
   background-color: blue;
   color: white;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: 12px;
   text-transform: uppercase;
-  transition: background-color 0.3s ease;
 }
 
 .button:hover {
   background-color: darkblue;
+}
+
+.delete-button{
+  margin-left: 5px;
 }
