--- a/euprava/frontend/eUprava/src/app/components/appointment-list-update/appointment-list-update.component.html
+++ b/euprava/frontend/eUprava/src/app/components/appointment-list-update/appointment-list-update.component.html
@@ -23,9 +23,10 @@
           <td>{{ appointment.student_id?.first_name || '' }} {{ appointment.student_id?.last_name || '' }}</td>
           <td>{{ appointment.description || '' }}</td>
           <td>
-            <button class="button" (click)="updateAppointment(appointment.id)">Azuriraj</button>
-            <button class="button delete-button" (click)="deleteAppointment(appointment.id)">Obriši</button>
-          </td>
+            <ng-container *ngIf="isFutureDate(appointment.date)">
+              <button class="button" (click)="updateAppointment(appointment.id)">Azuriraj</button>
+              <button class="button delete-button" (click)="deleteAppointment(appointment.id, appointment.date)">Obriši</button>
+            </ng-container> </td>
         </tr>
         </tbody>
       </table>
@@ -52,9 +53,10 @@
           <td>{{ systematicAppointment.field_of_study || '' }}</td>
           <td>{{ systematicAppointment.description || '' }}</td>
           <td>
-            <button class="button" (click)="updateAppointment(systematicAppointment.id)">Azuriraj</button>
-            <button class="button delete-button" (click)="deleteAppointment(systematicAppointment.id)">Obriši</button>
-          </td>
+            <ng-container *ngIf="isFutureDate(systematicAppointment.date)">
+              <button class="button" (click)="updateAppointment(systematicAppointment.id)">Azuriraj</button>
+              <button class="button delete-button" (click)="deleteAppointment(systematicAppointment.id, systematicAppointment.date)">Obriši</button>
+            </ng-container> </td>
         </tr>
         </tbody>
       </table>
